--- a/TestProject/build.gradle
+++ b/TestProject/build.gradle
@@ -17,6 +17,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'org.sonarqube'
 apply plugin: 'jacoco'
+apply plugin: 'war'
 
 jar {
 	baseName = 'boot-gradle'
@@ -45,3 +46,7 @@ dependencies {
 	runtime('mysql:mysql-connector-java:5.1.37')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+war {
+	archiveName 'TestProject.war'
+    }
