--- a/TestProject/build.gradle
+++ b/TestProject/build.gradle
@@ -42,7 +42,7 @@ sonarqube {
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web','org.springframework.boot:spring-boot-devtools','org.springframework.boot:spring-boot-starter-data-jpa','org.springframework.boot:spring-boot-starter-data-mongodb','org.projectlombok:lombok:1.16.2')
+	compile('org.springframework.boot:spring-boot-starter-web','org.springframework.boot:spring-boot-devtools','org.springframework.boot:spring-boot-starter-data-jpa','org.projectlombok:lombok:1.16.2')
 	runtime('mysql:mysql-connector-java:5.1.37')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
