--- a/TestProject/manifest.yml
+++ b/TestProject/manifest.yml
@@ -1,4 +1,10 @@
 applications:
-- name: TestProject
-  memory: 512M
-  host: TestProjectApp
+ - name: TestProject
+   buildpack: java_buildpack
+   path: build/libs/TestProject.war
+   instances: 1
+   timeout: 180
+   memory: 512M
+   host: TestProject1
+   env:
+    JBP_CONFIG_OPENJDK: 'verion: 1.8.+'
